--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/c++
-# Edit at https://www.toptal.com/developers/gitignore?templates=c++
-
 ### C++ ###
 # Prerequisites
 *.d
@@ -35,5 +32,8 @@
 *.out
 *.app
 
-# End of https://www.toptal.com/developers/gitignore/api/c++
+# Tags
+tags
 
+# Target
+fluid
